# SpaceLoreExploration

./: .gitignore  README.md
tertut01/Engine/: CMakeLists.txt  Camera.cpp  Camera.h  DirectXTKSimpleSample_2015.vcxproj  DirectXTKSimpleSample_2015.vcxproj.filters  FuelTurbo.mtl  FuelTurboFlameLeft.mtl  FuelTurboFlameRight.mtl  FuleTurboFlames.mtl  Game.cpp  Game.h  Input.cpp  Input.h  Light.cpp  Light.h  PhysicsObject.cpp  PhysicsObject.h  Planet.cpp  Planet.h  Planet.mtl  PlanetHalo.mtl  PlanetarySystem.cpp  PlanetarySystem.h  Shader.cpp  Shader.h  Solarsystemscope_texture_2k_sun.dds  SpaceShip.mtl  SpaceShip_Flames.dds  Spaceship.cpp  Spaceship.h  Stars_bg.dds  TurboFlame_Tex.dds  bloom_ps.cso  bloom_vs.cso  colour_ps.cso  colour_vs.cso  glow_ps.cso  glow_ps.hlsl  glow_vs.cso  glow_vs.hlsl  (+7 more)
tertut01/Engine/Planets_Textures/Planet Textures 1024x512/Arid/: Arid_01-1024x512.dds  Arid_02-1024x512.dds  Arid_03-1024x512.dds  Arid_04-1024x512.dds  Arid_05-1024x512.dds
tertut01/Engine/Planets_Textures/Planet Textures 1024x512/Barren/: Barren_01-1024x512.dds  Barren_02-1024x512.dds  Barren_03-1024x512.dds  Barren_04-1024x512.dds  Barren_05-1024x512.dds
tertut01/Engine/Planets_Textures/Planet Textures 1024x512/Dusty/: Dusty_01-1024x512.dds  Dusty_02-1024x512.dds  Dusty_03-1024x512.dds  Dusty_04-1024x512.dds  Dusty_05-1024x512.dds
tertut01/Engine/Planets_Textures/Planet Textures 1024x512/Gaseous/: Gaseous_01-1024x512.dds  Gaseous_02-1024x512.dds  Gaseous_03-1024x512.dds  Gaseous_04-1024x512.dds  Gaseous_05-1024x512.dds  Gaseous_06-1024x512.dds  Gaseous_07-1024x512.dds  (+13 more)
(+64 files in other folders)
